[tool.poetry]
name = "sj-cap-eng"
version = "0.1.0"
description = ""
authors = ["Guilherme Arruda <guiga.arruda@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
duckdb = "0.10.2"
pandas = "2.2.2"
polars = "0.20.23"
requests = "2.31.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
